# investment_valuation

./: .gitignore  README.md  README.py  config.py  data_fetcher.py  data_position.py  data_processor.py  database.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: Delete-history-workflow.yaml  stock_valuation.yml
data/: position.csv  stocks_data.csv  transfer.csv
data/output/: HK00388_valuation.json  HK00700_valuation.json  HK09633_valuation.json  SH600036_valuation.json  SH600276_valuation.json  SH600436_valuation.json  SH600519_valuation.json  SH600600_valuation.json  SH600660_valuation.json  SH600690_valuation.json  SH600887_valuation.json  SH603195_valuation.json  SH603259_valuation.json  SH603288_valuation.json  SH603444_valuation.json  SH603605_valuation.json  SH603899_valuation.json  SH605499_valuation.json  SZ000333_valuation.json  SZ000538_valuation.json  SZ000568_valuation.json  SZ000848_valuation.json  SZ000858_valuation.json  SZ000895_valuation.json  SZ000999_valuation.json  SZ002032_valuation.json  SZ002262_valuation.json  SZ002415_valuation.json  SZ002555_valuation.json  SZ300033_valuation.json  SZ300059_valuation.json  SZ300760_valuation.json  SZ300896_valuation.json  all_stocks_valuation.json
docs/: history_valuation.html  index.html  position.html
docs/data/: HK00388_valuation.json  HK00700_valuation.json  HK09633_valuation.json  SH600036_valuation.json  SH600276_valuation.json  SH600436_valuation.json  SH600519_valuation.json  SH600600_valuation.json  SH600660_valuation.json  (+28 more)
frontend/: history_valuation.html  index.html
(+36 files in other folders)
